# tree-sitter-objc

./: CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-objc.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_objc/: __init__.py  binding.c
bindings/rust/: README.md  build.rs  lib.rs
bindings/swift/TreeSitterObjc/: objc.h
bindings/swift/TreeSitterObjcTests/: TreeSitterObjcTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json
test/corpus/c/: expressions.txt
